--- a/src/ui/page/post/PostFlair.pug
+++ b/src/ui/page/post/PostFlair.pug
@@ -21,11 +21,10 @@ span.post-flair(style="background-color: {color || 'white'}; color: {(new Color(
 style.
 	.post-flair
 		align-items center
-		border-top-left-radius 6px
-		border-top-right-radius 6px
+		border-radius 6px
 		display inline-flex
-		font-size 9pt
-		gap 0.5ch
+		font-size 12px
+		gap 3px
 		padding 2px 6px
 		user-select none
 		white-space pre
