--- a/src/ui/stylesheet.styl
+++ b/src/ui/stylesheet.styl
@@ -19,6 +19,9 @@
 	--color-paper-border gainsboro
 	--color-writing-action mediumslateblue
 	--typeface-mono 'Roboto Mono', 'Cascadia Mono', 'Consolas', monospace
+strong
+	font-weight 600
+	letter-spacing 0.015em
 .color-strategy-black-text
 	color-scheme light
 	--c-back-default white
@@ -117,8 +120,6 @@ a
 	text-decoration none
 address
 	font-style normal
-strong
-	letter-spacing 0
 sub
 sup
 	line-height 0
