--- a/src/ui/stylesheet.styl
+++ b/src/ui/stylesheet.styl
@@ -102,15 +102,15 @@ h6
 // Tables
 table
 	border-collapse collapse
-	font-size 9pt
+	font-size 11px
 	margin 0.5em 0 0 0
 	overflow-wrap normal
 td
 th
-	border 1px solid var(--c-con-strong)
-	padding 3px 6px
+	padding 1px 0
+	padding-right 3ch
 	text-align left
-	vertical-align middle
+	vertical-align top
 th
 	background var(--c-con-strong)
 
