ui: work on layout

--- a/src/ui/base/BaseApplicationRoute.pug
+++ b/src/ui/base/BaseApplicationRoute.pug
@@ -8,4 +8,4 @@ script.
 	BaseRedirect(path={route.page_data.path})
 {:else}
 	BaseAccountContext
-		BaseLayout(listing_data={route.listing_data} listing_type={route.listing_type} page_data={route.page_data} page_type={route.page_type})
+		BaseLayout(page_data={route.page_data} page_type={route.page_type})
