--- a/src/ui/page/listing/ListingSort.pug
+++ b/src/ui/page/listing/ListingSort.pug
@@ -1,5 +1,5 @@
 script.
-	import Button from '../framework/Button.pug'
+	import Button from '../../framework/Button.pug'
 	export base_path = '/'
 	export selection = 'hot'
 	export sort_options = []
