--- a/src/ui/page/listing/ListingTimeRange.pug
+++ b/src/ui/page/listing/ListingTimeRange.pug
@@ -1,5 +1,5 @@
 script.
-	import Button from '../framework/Button.pug'
+	import Button from '../../framework/Button.pug'
 	export base_path = '/'
 	export selection = 'all'
 	format_href = (range) ->
