post: work on layout

--- a/src/ui/base/Base404.pug
+++ b/src/ui/base/Base404.pug
@@ -1,14 +1,14 @@
 script.
 	export path = ''
 
-.page-unavailable
+#page-unavailable
 	h1 Page unavailable
 	p This page is not available to you.
 	p We suggest that you
 		a(href='https://www.reddit.com{path}') confirm its status on reddit.com.
 
 style.
-	.page-unavailable
+	#page-unavailable
 		align-items center
 		display flex
 		flex-flow column nowrap
