--- a/src/ui/base/BaseRedirect.pug
+++ b/src/ui/base/BaseRedirect.pug
@@ -2,13 +2,13 @@ script.
 	export path = ''
 	location.href = 'https://www.reddit.com' + path
 
-.official-site-redirect
+#official-site-redirect
 	h1 Redirecting you to reddit.com...
 	p If you are not redirected automatically, 
 		a(href='https://www.reddit.com{path}') click here.
 
 style.
-	.official-site-redirect
+	#official-site-redirect
 		align-items center
 		display flex
 		flex-flow column nowrap
