--- a/src/ui/base/BaseNavigation.pug
+++ b/src/ui/base/BaseNavigation.pug
@@ -17,7 +17,7 @@ script.
 				unread_reply_count = (post_replies?.length + comment_replies?.length) or 0
 		)
 
-nav.global-nav
+nav#global-nav
 	section
 		Button(key='h' link='/' text='Home')
 		br
@@ -30,6 +30,11 @@ nav.global-nav
 		Button(action={() => show_help = true} key='?' text='Help')
 		Button(action={() => show_settings = true} key='*' text='Settings')
 		Button(action={() => show_feedback = true} key='>' text='Feedback')
+		br
+		{#if getContext('username')}
+			Button(action={() => { api.logout(); localStorage.clear(); location.reload() }} key='&' text='Unlink Reddit Account')
+		{:else}
+			Button(key='&' link={api.getLoginURL({ memoString: location.pathname })} text='Link Reddit Account')
 PopupWindow(exit_action={() => show_help = false} title='Help' visible={show_help})
 PopupWindow(exit_action={() => show_settings = false} title='Settings' visible={show_settings})
 PopupWindow(exit_action={() => show_feedback = false} title='Feedback' visible={show_feedback})
@@ -38,14 +43,10 @@ style.
 	section
 		display flex
 		flex-flow column nowrap
-		width 127px
-	.global-nav
-		align-items flex-end
-		box-sizing content-box
+	#global-nav
 		display flex
 		flex-flow column nowrap
 		justify-content space-between
-		justify-self flex-end
 		left 0
 		height 100%
 		padding 10px 0
