--- a/src/ui/page/listing/Listing.pug
+++ b/src/ui/page/listing/Listing.pug
@@ -146,20 +146,17 @@ nav.listing
 					Button(action={() => load_page(pages.length)} text='More')
 style.
 	.listing
-		display flex
-		flex-flow column nowrap
-		height 100vh
 		width 480px
 	.listing-content
 		display flex
-		flex 1
 		flex-flow column nowrap
 		gap 1ch
-		overflow-y auto
 	.listing-filter
 		border 1px solid
 	.listing-info
 		padding 10px
+		position sticky
+		top 0
 		h1
 			font inherit
 		menu
