--- a/src/ui/base/BasePageContent.pug
+++ b/src/ui/base/BasePageContent.pug
@@ -13,17 +13,16 @@ script.
 		{#if type === 'collection'}
 			Listing(type='collection_posts' data={data})
 		{:else if type === 'home'}
-			
+			{#if getContext('username')}
+				Listing(type='multireddit_posts' data={{ multireddit_name: 'subscriptions', user_name: 'r' }})
+			{:else}
+				Listing(type='multireddit_posts' data={{ multireddit_name: 'all', user_name: 'r' }})
 		{:else if type === 'inbox'}
 			Listing(type='current_user_messages' data={data})
 		{:else if type === 'message'}
 			Message(short_id={data.message_short_id})
 		{:else if type === 'multireddit'}
 			Listing(type='multireddit_posts' data={data})
-		{:else if type === 'multireddit_all'}
-			Listing(type='multireddit_posts' data={{ ...data, multireddit_name: 'all', user_name: 'r' }})
-		{:else if type === 'multireddit_popular'}
-			Listing(type='multireddit_posts' data={{ ...data, multireddit_name: 'popular', user_name: 'r' }})
 		{:else if type === 'subreddit'}
 			Listing(type='subreddit_posts' data={data})
 		{:else if type === 'subreddits'}
