--- a/src/ui/stylesheet.styl
+++ b/src/ui/stylesheet.styl
@@ -32,6 +32,7 @@ strong
 	--c-text-strong black
 .color-strategy-white-text
 	color-scheme dark
+	font-weight 340
 	--c-back-default #343537
 	--c-con-weak rgba(0,0,0,0.05)
 	--c-con-norm rgba(0,0,0,0.10)
