--- a/src/ui/page/post/PostComment.pug
+++ b/src/ui/page/post/PostComment.pug
@@ -34,13 +34,15 @@ script.
 		<!-- 'comment' role is draft status and not recognized yet -->
 		<!-- svelte-ignore a11y-unknown-role -->
 		article.comment(role='comment')
+			section.comment-body
+				TextHTML(html={comment.body_html})
+				.comment-author
+					UserAvatar(name={comment.author})
 			header
-				UserAvatar(name={comment.author})
 				{#if comment.distinguished || comment.is_submitter}
 					UserDistinguish(type={comment.distinguished || 'submitter'})
 				PostAge(created={comment.created_utc} edited={comment.edited})
-			TextHTML(html={comment.body_html})
-			footer
+			footer(style='visibility:hidden')
 				PostScore(awards={comment.all_awardings} controversiality={comment.controversiality} upload_vote={(vote) => api.submit(api.ID('comment_vote', short_id), { numerical_vote: vote })} value={!comment.score_hidden && comment.score} vote={comment.likes == null ? 0 : comment.likes ? 1 : -1})
 		{#if !out_of_context && comment.replies.length > 0}
 			{#key comment.replies}
@@ -59,17 +61,7 @@ style.
 		align-items flex-start
 		display flex
 		flex-flow column nowrap
-		gap 3px
-	:global(.comment img)
-		border-radius 9px
-		margin 1px
-		max-height 9em
-		width auto
-	:global(.comment > .md)
-		background var(--c-con-strong)
-		border-radius 12px
-		border-top-left-radius 2px
-		padding 12px
+		gap 5px
 	.comment > footer
 		align-items center
 		align-self stretch
@@ -81,6 +73,20 @@ style.
 		align-items center
 		display flex
 		gap 1ch
+	.comment-author
+		bottom -11px
+		position absolute
+		right -16px
+	.comment-body
+		background rgba(255,255,255,0.1)
+		border-radius 10px
+		padding 10px
+		position relative
+	:global(.comment-body img)
+		border-radius 9px
+		margin 1px
+		max-height 9em
+		width auto
 	.comment-clip
 		background #494949
 		border-radius 10px
@@ -88,7 +94,5 @@ style.
 	.comment-more-replies
 		margin-top 20px
 	.comment-replies
-		border-left 1px solid var(--c-con-norm)
-		margin-left 9px
 		margin-top 10px
-		padding-left 12px
+		padding-left 30px
